2005-05-27  Erez Zadok  <ezk@cs.sunysb.edu>

	* configure.in: check for <linux/socket.h>, which, if found,
	appears to be preferable to <sys/socket.h>.  Use it to find
	<linux/nfs_mount.h>.  On some Linux systems
	(Gentoo), both exist but only one must be included, or else you
	get redefined structure errors.

	* libamu/wire.c (is_network_member): check if masknum is
	INADDR_NONE, not "< 0" because it's an unsigned quantity.

	* libamu/util.c (xstrlcpy): remove useless test for size_t < 0,
	because it's an unsigned quantity.

2005-05-26  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1-rc6					***
	*******************************************************************

2005-05-25  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/nfs_prot/nfs_prot_aix5_2.h: AIX 5.3 complains about
	missing definition of struct thread_credentials in <sys/vfs.h>
	but trying to bring that definition in drags a whole lot of other
	messy stuff.  So just provide a dummy definition for this
	structure.

2005-05-24  Erez Zadok  <ezk@cs.sunysb.edu>

	* Makefile.am (EXTRA_DIST_M4): distribute m4/macros/libtool.m4.

	* m4/macros/header_templates.m4: template for HAVE_EXTERN_MNTCTL.

	* m4/macros/check_extern.m4: include <sys/vmount.h> on AIX
	systems, so we can find extern definition for mntctl().

	* conf/mtab/mtab_aix.c, conf/checkmount/checkmount_aix.c: only
	define an extern for mntctl() if needed.

	* amd/ops_nfs.c (prime_nfs_fhandle_cache): never, ever, use C++
	style comments in C code.  Some C compilers don't accept it.

	* amd/info_ldap.c (amu_ldap_init, get_ldap_timestamp): force cast
	of "time_t *ts" to u_long, to avoid complaints on AIX 5.2 with
	xlC.

	* amd/get_args.c: rename symbol conf_file to amu_conf_file to
	avoid conflict with libldap.a from openldap-2.0.21 on AIX 5.2.
	Oh, when will people who develop libraries learn to always prefix
	their exported symbols with a library-specific name?
